--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -23,10 +23,9 @@ jobs:
         run: |
           if [ ! -f "gradlew" ]; then gradle wrapper; fi
           chmod +x gradlew
-          ./gradlew assembleDebug --stacktrace
+          ./gradlew assemblerelease --build-cache --parallel --daemon --warning-mode all
       - name: Upload APK
         uses: actions/upload-artifact@v2
         with:
           name: my-build-apk
           path: ./**/*.apk
-
